fix: wrap long username into the next line

--- a/src/core/client/admin/views/decisionHistory/components/Info.css
+++ b/src/core/client/admin/views/decisionHistory/components/Info.css
@@ -1,4 +1,5 @@
 .root {
   font-size: calc(14rem / var(--rem-base));
   line-height: calc(16em / 12);
+  word-break: break-word;
 }
